[package]
name = "iterator-ext"
description = "An extension to Rust's Iterator"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
categories = ["rust-patterns", "algorithms"]
documentation = "https://docs.rs/iterator-ext/"
repository = "https://github.com/jerry73204/iterator-ext.git"
homepage = "https://github.com/jerry73204/iterator-ext"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
